--- a/fanbatlle/tsconfig.json
+++ b/fanbatlle/tsconfig.json
@@ -41,9 +41,9 @@
         // "resolvePackageJsonImports": true,                /* Use the package.json 'imports' field when resolving imports. */
         // "customConditions": [],                           /* Conditions to set in addition to the resolver-specific defaults when resolving imports. */
         // "noUncheckedSideEffectImports": true,             /* Check side effect imports. */
-        // "resolveJsonModule": true,                        /* Enable importing .json files. */
-        // "allowArbitraryExtensions": true,                 /* Enable importing files with any extension, provided a declaration file is present. */
-        // "noResolve": true,                                /* Disallow 'import's, 'require's or '<reference>'s from expanding the number of files TypeScript should add to a project. */
+
+        "resolveJsonModule": true,
+        "allowArbitraryExtensions": true,
 
         /* JavaScript Support */
         "allowJs": true /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */,
@@ -117,6 +117,6 @@
     "include": [
         "resources/js/**/*.ts",
         "resources/js/**/*.d.ts",
-        "resources/js/**/*.tsx",
+        "resources/js/**/*.tsx"
     ]
 }
